[project]
name = "redshift-user-manager"
dynamic = ["version"]
authors = [
  { name="Avinash Santhanagopalan", email="avinash.santhanagopalan@qapital.com" },
]
description = "A user management CLI tool for AWS Redshift."
readme = "README.md"
requires-python = ">=3.13"
license = {text="GPL-3.0-or-later"}

dependencies = [
    "pydantic",
    "pyyaml",
    "asyncpg>=0.30.0",
    "click>=8.0.0"
]

keywords = [
  "sql",
  "redshift",
  "user",
  "managment"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
rum = "redshift_user_manager.cli:entrypoint"

[tool.setuptools.dynamic]
version = {attr = "redshift_user_manager.__version__"}
